# ColSmoll_RAG_with_Qdrant

./: .gitignore  README.md  pyproject.toml
multimodal_rag/: app.py  example.py
multimodal_rag/models/: multimodal_rag.py
multimodal_rag/utils/: dataset_utils.py
